test/simple/ill-typed/singletype_int_bool.caprice
(* TEST
  include refute;
*)


let t : singleton int = bool
